        Add GCOMObservation::tim() and GCOMObservation::oads() setter methods
        Add GModelSpatialRadialGeneralGauss and 
          GModelSpatialEllipticalGeneralGauss classes (#3924)
        Remove GCOMSelection::zeta_min() and GCOMSelection::zeta_max()
          methods
        Add GCOMSelection::fpmtflag(), GCOMSelection::use_d1() and 
          GCOMSelection::use_d2() methods (#3917)
        Rename GCOMModelDRBFitting class to GCOMModelDRBPhibarNodes (#3914).
        Add GCOMModelDRBPhibarBins class (#3913)
        Compute spectral model gradients for negative factor values
        Add likelihood fit event selection hook (#3912)
        Add GCOMModelDRM class (#3910)
        Add angle(GVector&,GVector&) friend function (#3908)
        Make extension name check case insensitive in GFits::extno()
        Add numerical gradient step size member to GObservation
        Add stamp() methods to GApplication (#3662)
        Add ASCL shield to "About" page (#3630)
        Add GModelSpectralFunc spectral constructor (#3626)
        Add GModelSpectralBins class (#3606)
        Added GApplication statistics() and add_celapse() methods (#3592)
        Add GammaLib daemon for application statistics management (#3592)
        Add carbon footprint estimation and application statistic logging to
          GApplication (#3592)
        Add phase selection to GCOMSelection and GCOMDri (#3564)
        Fix incompatibility in GMatrixSparse::mix_column_prepare() method (#3563)
        Add missing members to GOptimizerLM::copy_members() method
        Store DRB, DRG and DRX as GCOMDri in GCOMObservation (#3560)
        Implement COMPTEL response for diffuse models (#3558)
        Implement COMPTEL background model computation (#3557)
        Fix reading of scaled FITS columns, remove GFitsTableCol::scale() method (#3553)
        Add gammalib::compare() function (#3552)
        Add DRI constructor to GCOMObservation class
        Add member access methods to GCOMDri class